# solana-pqzk-fullchain

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/kem-cli/: Cargo.toml  README.md
crates/kem-cli/src/: main.rs
crates/slh-dsa-wasm/: Cargo.toml  README.md
crates/slh-dsa-wasm/src/: lib.rs
crates/stark-prover/: Cargo.toml  README.md
crates/stark-prover/src/: lib.rs  main.rs
examples/benchmarks/: README.md  finalize.ts.txt  results-finalize-only.csv  results-verify-only.csv  results.csv  run-bench.sh  statistics.txt
examples/cli-chat/: README.md  package-lock.json  package.json  tsconfig.json
examples/cli-chat/src/: finalize.ts  keys.ts  receive.ts  upload.ts
examples/cli-chat/src/utils/: crypto.ts  sdk.ts
fixed/idl/: stark_pqc_verifier.json
fixed/types/: stark_pqc_verifier.ts
programs/stark-pqc-verifier/: Cargo.toml  README.md
programs/stark-pqc-verifier/src/: crypto.rs  finalize.rs  heap.rs  init.rs  lib.rs  state.rs  upload.rs
