[package]
name    = "slh-dsa-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slh-dsa = { path = "../../third-party/slh-dsa", default-features = false }
wasm-bindgen = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
